force-app/main/default/objects/Sales_Checklist__c/Sales_Checklist__c.object-meta.xml
<CustomObject>
    <description>Used as sales script</description>
    <label>Sales Checklist</label>
    <nameField>
        <displayFormat>{00}</displayFormat>
        <label>Sales Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>