force-app/main/default/objects/Sales_Checklist__c/fields/Delivery_Service__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking whether the restaurant has table or it just offers a delivery service.</inlineHelpText>
    <label>Delivery Service</label>
    <type>Checkbox</type>
</CustomField>