force-app/main/default/objects/Sales_Checklist__c/fields/Informed_about_Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Informed_about_Commission_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Inform about commission rate.(Minimum commission rate is 12.5% except official franchise restaurants)</inlineHelpText>
    <label>Informed about Commission Rate</label>
    <type>Checkbox</type>
</CustomField>