force-app/main/default/objects/Sales_Checklist__c/fields/Informed_about_Online_Payment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Informed_about_Online_Payment_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Inform about VAT and commission of Online Payment(Additional charge)</inlineHelpText>
    <label>Informed about Online Payment Fee</label>
    <type>Checkbox</type>
</CustomField>