force-app/main/default/objects/Sales_Checklist__c/fields/Informed_about_Online_Payment_Period__c.field-meta.xml
<CustomField>
    <fullName>Informed_about_Online_Payment_Period__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>By the offset disposal with commission and refund amount, we return the difference in 7 working days. (Fee from 1st to 15th refunds on 16th / Fee from 16th to the last day of the month refudns on the 1st day of the next month.)</inlineHelpText>
    <label>Informed about Online Payment Period</label>
    <type>Checkbox</type>
</CustomField>