force-app/main/default/objects/Sales_Checklist__c/fields/Informed_about_Payment_Period__c.field-meta.xml
<CustomField>
    <fullName>Informed_about_Payment_Period__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Inform about payment period (Twice a month; 1st-15th, 16th-last day of the month)</inlineHelpText>
    <label>Informed about Payment Period</label>
    <type>Checkbox</type>
</CustomField>