force-app/main/default/objects/Sales_Checklist__c/fields/Informed_about_Post_Period__c.field-meta.xml
<CustomField>
    <fullName>Informed_about_Post_Period__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>We send transaction history with tax invoice by post in 5 working days from the refund day or 7 working days after the settlement.</inlineHelpText>
    <label>Informed about Post Period</label>
    <type>Checkbox</type>
</CustomField>