force-app/main/default/objects/Sales_Checklist__c/fields/Informed_about_VAT__c.field-meta.xml
<CustomField>
    <fullName>Informed_about_VAT__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Inform about VAT</inlineHelpText>
    <label>Informed about VAT</label>
    <type>Checkbox</type>
</CustomField>