force-app/main/default/objects/Sales_Checklist__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Checklists</relationshipLabel>
    <relationshipName>Sales_Checklists</relationshipName>
    <type>Lookup</type>
</CustomField>